<resources>
    <string name="app_name">ViyatekTask</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_bookmark">Bookmark</string>
    <string name="navigation_preference">Preference</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!--imageUrl-->
    <string name="cheap_image_jpg_url">https://apps-images.s3-us-west-2.amazonaws.com/facts-images/%1$s.jpg</string>
</resources>